RESOLVED FIXED87885
DFG does not correctly handle exceptions caught in the LLInt
https://bugs.webkit.org/show_bug.cgi?id=87885
Summary DFG does not correctly handle exceptions caught in the LLInt
Oliver Hunt
Reported 2012-05-30 12:26:43 PDT
DFG does not correctly handle exceptions caught in the LLInt
Attachments
Patch (11.93 KB, patch)
2012-05-30 12:28 PDT, Oliver Hunt
fpizlo: review+
Oliver Hunt
Comment 1 2012-05-30 12:28:39 PDT
Filip Pizlo
Comment 2 2012-05-30 12:33:01 PDT
Comment on attachment 144895 [details] Patch Woohoo! :-)
Oliver Hunt
Comment 3 2012-05-30 12:47:53 PDT
Oliver Hunt
Comment 4 2012-05-30 12:48:20 PDT
Note You need to log in before you can comment on or make changes to this bug.