DFG does not correctly handle exceptions caught in the LLInt https://bugs.webkit.org/show_bug.cgi?id=87885

Reviewed by Filip Pizlo.

Source/JavaScriptCore:

Make the DFG use genericThrow, rather than reimplementing a small portion of it.
Also make the LLInt slow paths validate that their PC is correct.

* dfg/DFGOperations.cpp:
* llint/LLIntSlowPaths.cpp:
(LLInt):

LayoutTests:

Pile of code to convince the DFG to throw an exception that ends up being caught
in the LLInt

* fast/js/exception-propagate-from-dfg-to-llint-expected.txt: Added.
* fast/js/exception-propagate-from-dfg-to-llint.html: Added.
* fast/js/script-tests/exception-propagate-from-dfg-to-llint.js: Added.
(o.toString):
(h):
(g):
(f1):
(f2):

Canonical link: https://commits.webkit.org/105680@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118956 268f45cc-cd09-0410-ab3c-d52691b4dbfc